[gd_scene load_steps=7 format=3 uid="uid://dninw81pe2w8t"]

[ext_resource type="Script" path="res://game/card/card.gd" id="1_coes2"]
[ext_resource type="Texture2D" uid="uid://d1bfb875td1aa" path="res://assets/sprites/cards/Front.png" id="2_cj8rc"]
[ext_resource type="Texture2D" uid="uid://cefr08ri3yfsn" path="res://assets/sprites/cards/mice/EX3_IMG.png" id="4_eu3dm"]

[sub_resource type="LabelSettings" id="LabelSettings_gxgqr"]
line_spacing = 1.0
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l3u6a"]
line_spacing = 1.0
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r7ajp"]
line_spacing = 1.0
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="BaseCard" type="PanelContainer"]
custom_minimum_size = Vector2(68, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -50.0
offset_right = 34.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(34, 50)
mouse_filter = 1
script = ExtResource("1_coes2")

[node name="Back" type="TextureRect" parent="."]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_cj8rc")

[node name="CardState" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CardState"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_eu3dm")
expand_mode = 1
stretch_mode = 4

[node name="Race" type="Label" parent="CardState"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "Race"
label_settings = SubResource("LabelSettings_gxgqr")
horizontal_alignment = 1

[node name="Name" type="Label" parent="CardState"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -41.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
text = "Name"
label_settings = SubResource("LabelSettings_l3u6a")
horizontal_alignment = 1

[node name="Value" type="Label" parent="CardState"]
layout_mode = 1
offset_left = 4.0
offset_right = 14.0
offset_bottom = 24.0
text = "0"
label_settings = SubResource("LabelSettings_r7ajp")
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_back_gui_input"]
